[package]
name = "advent-of-code-2021"
version = "0.1.0"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2021"
rust-version = "1.56"
default-run = "advent-of-code-2021"

[dependencies]
itertools = "0.10.5"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[[bin]]
name = "day01"
path = "src/day01.rs"
