[package]
name = "advent-of-code-2022"
version = "0.1.0"
authors = ["Roberto <rob.ariosa@hotmail.com>"]
edition = "2021"
rust-version = "1.56"
default-run = "advent-of-code-2022"

[dependencies]
itertools = "0.10"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benches"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
debug = true

[[bin]]
name = "day01"
path = "src/day01.rs"

[[bin]]
name = "day02"
path = "src/day02.rs"

[[bin]]
name = "day03"
path = "src/day03.rs"

[[bin]]
name = "day04"
path = "src/day04.rs"

[[bin]]
name = "day05"
path = "src/day05.rs"

[[bin]]
name = "day06"
path = "src/day06.rs"

[[bin]]
name = "day07"
path = "src/day07.rs"

[[bin]]
name = "day08"
path = "src/day08.rs"
